# computing-at-scale-demo-2025

./: .gitignore  Kairvi_Lodhiya.md  README.md  abhiyan-paudel.md  bibek_shrestha.md  cmake-run.yml  fuad-hasan.md  ickbum_kim.md  install.sh  jay-gaiardelli.md  mikiel-gica.md  scott-blender.md  student-template.md  test.cpp  zachary-knowlan.md
.github/workflows/: cmake-run.yml
Demo_lecture4/: CMakeLists.txt  main.cpp
Demo_lecture4/mathlibrary/: mathlibrary.cpp  mathlibrary.h
assignment0_bibek/: CMakeLists.txt  MM_MV_Product.cpp  MM_MV_Product.h  README.md  assignment0.md  main.cpp
assignment0_bibek/testmatrices/: matrixB.mtx
examples/: CMakeLists.txt  config.sh  gdb-example.cpp  install.sh  main.cpp  noisy.hpp  type_erasure.cpp  unit_test.cpp  unit_tests.cpp  vector.hpp  virtual.cpp
examples/mathlibrary/: CMakeLists.txt  mathlibrary.cpp  mathlibrary.h
project-proposals/: README.md
